// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `Array []`;

exports[`2. does not render an image if ratio is not received 1`] = `Array []`;

exports[`3. image with no caption 1`] = `
<div>
  <TimesImage
    aspectRatio={1.7777777777777777}
    uri="https://imageserver/someImage"
  />
</div>
`;

exports[`4. image with caption 1`] = `
<div>
  <div>
    <div>
      <div>
        Some caption
      </div>
    </div>
  </div>
</div>
`;

exports[`5. image with credit 1`] = `
<div>
  <div>
    <div>
      <div>
        SOME CREDIT
      </div>
    </div>
  </div>
</div>
`;
